@startuml
'https://plantuml.com/class-diagram
skinparam linetype polyline

class controllers.Deck{
 - deck : ChanceCard[]
 + shuffle()
 + drawCard() : ChanceCard
 + getDeckSize() : int
}
package models.chanceCards{

abstract ChanceCard{
 # NAME : String {final}
 # DESCRIPTION : String {final}
 + getType() : String {final}
 + ChanceCard(name : String, description : String)
 + abstract chanceEffect() : gameStateDTO
}
class ChangeBalance {
 - EFFECT : int {final}
 - FROM_OTHERS : boolean {final}
 + ChangeBalance(name: String, description: String, EFFECT: int, FromOtherPlayers: boolean)
}
class GetOutOfJail {
    GetOutOfJail(name : String, description : String)
}
class Grant {
 - BONUS : int {final}
 - MAXWORTH : int {final}
 + Grant(name : String, description : String, bonus : int, maxWorth : int)
}
class MoveToFerry {
 - RENTMULTIPLIER : int {final}
 - PASSSTARTBONUS : boolean {final}
 + MoveToFerry(name : String, description : String, rentMultiplier : int, passStartBonus : boolean) {
}

class MoveToField {
 - FIELD_ID : int {final}
 - PASS_START_BONUS : boolean {final}
 + MoveToField(name : String, description : String, passStartBonus : boolean, fieldId : int) {
}
class MoveXSteps {
 - MAX_STEPS : int {final}
 + MoveXSteps(name : String, description : String, stepsToMove : int) {
}
class Tax {
 - HOUSE_TAX : int {final}
 - HOTEL_TAX : int {final}
 Tax(name : String, description : String, houseTax : int, hotelTax : int){
}
controllers.Deck o-- ChanceCard

ChanceCard <|-left- ChangeBalance
ChanceCard <|-right- Grant
ChanceCard <|-- Tax
ChanceCard <|-- MoveXSteps
ChanceCard <|-right- MoveToFerry
ChanceCard <|-- GetOutOfJail
ChanceCard <|-- MoveToField

@enduml